@@ -1,5 +1,11 @@
 2003-10-20  Bruno Haible  <bruno@clisp.org>
 
+	Portability to AIX with cc.
+	* xgettext.h (struct flag_context_ty): Define the bitfields of type
+	'unsigned int'.
+
+2003-10-20  Bruno Haible  <bruno@clisp.org>
+
 	Portability to Solaris with cc.
 	* x-java.c (string_buffer_append): Avoid aggregate initializer
 	containing non-constant expressions.
